= RubyMotion 3.2 =

  * [iOS] Fixed a bug where WatchKit applications did not honor `xcode_dir`.
  * [iOS] Fixed a bug where it couldn't debug with `rake device debug=1' on
    device. Now, debugging only support `armv7' in `app.archs['iPhoneOS']'.
    (i.e. app.archs['iPhoneOS'] = ['armv7'])
  * [OSX] Fixed a bug where NSString#initWithXXX would trigger a crash by double
    free.

= RubyMotion 3.1 =

  * [iOS] Fixed an API validation error when submitting an application that
    contains an extension.
  * [iOS] Fixed a regression that made it impossible to set environment
    variables from a host application and propagate them to extensions.
  * [iOS] Fixed a regression that made extensions crash at startup.
  * [iOS] Fixed a regression where a Info.plist file would be generated
    with wrong details for Background Fetch.
  * [iOS] Fixed a bug where `rake background_fetch=1' for background fetch
    would not work with Xcode 6.x.
  * [Android] Added Fixnum#{~,&,|,^,<<,>>,+@,integer?,odd?,even?}.
  * [Android] Added Float#+@.
  * [Android] Added Bignum#integer?.
  * [Android] Fixed Fixnum#times to return an Enumerator when no block is given.

= RubyMotion 3.0 =

  * [Android] RubyMotion for Android support has been merged. Please refer to
    the pre-release NEWS file for past changes, and check out our developer
    guides for more information about this new platform support.
  * [iOS] Added support for WatchKit applications.
    Add a target to your iOS application by creating a WatchKit project with the
    command: `$ motion create MyWatchApp --template=ios-watch-extension` and
    then configure your iOS application by adding:
    `app.target 'path/to/MyWatchApp', :extension`
    Then from the root of your iOS application, *not* the WatchKit application,
    invoke `$ rake watch` to build your iOS and WatchKit applications and launch
    the WatchKit application on the simulator.
    Additional launch options are `type=glance` for Glance applications,